@@ -29,6 +29,7 @@
 #ifndef _RPACKAGESTATUS_H_
 #define _RPACKAGESTATUS_H_
 
+#include <time.h>
 #include <vector>
 #include <string>
 #include <sstream>
@@ -85,7 +86,9 @@ class RPackageStatus {
    };
 
    bool isSupported(RPackage *pkg);
-   
+
+   // return the time until the package is supported
+   bool maintenanceEndTime(RPackage *pkg, struct tm *support_end_tm);
 };
 
 #endif
