@@ -21,6 +21,8 @@ synaptic (0.62.2) unstable; urgency=low
   * common/rpackage.cc:
     - fix code to get candidate origin
     - support getting the candidate release file name
+  * common/rpackagestatus.cc:
+    - support maintenanceEndTime() (if the distro supports that)
 
  --
 
